[gd_scene load_steps=10 format=2]

[ext_resource path="res://Conversation/RadioVisual.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Handheld_B.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Handheld_C.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Handheld_Speaking.png" type="Texture" id=4]
[ext_resource path="res://Conversation/Radio.gd" type="Script" id=5]
[ext_resource path="res://Assets/UI/Handheld_A.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/Handheld_Receiving.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 31.25, 53.75 )

[node name="Radio" type="AnimatedSprite"]
position = Vector2( 456.666, 232.502 )
frames = SubResource( 6 )
script = ExtResource( 5 )

[node name="Visual" type="Node2D" parent="."]
position = Vector2( -6.6665, -10 )
scale = Vector2( 0.13, 0.13 )
script = ExtResource( 1 )

[node name="Radio_B" type="Sprite" parent="Visual"]
modulate = Color( 0.423529, 0.423529, 0.423529, 1 )
texture = ExtResource( 2 )

[node name="Radio_C" type="Sprite" parent="Visual"]
modulate = Color( 0.832031, 0.832031, 0.832031, 1 )
texture = ExtResource( 3 )

[node name="Radio_A" type="Sprite" parent="Visual"]
texture = ExtResource( 6 )

[node name="Radio_Receiving" type="Sprite" parent="Visual"]
visible = false
texture = ExtResource( 7 )

[node name="Radio_Speaking" type="Sprite" parent="Visual"]
position = Vector2( -83.3345, 83.3328 )
rotation = -0.535295
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="Visual"]
position = Vector2( 77.7827, 122.21 )
scale = Vector2( 6.66667, 6.66667 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visual/Area2D"]
position = Vector2( 2.91669, 0.416763 )
shape = SubResource( 4 )

[connection signal="input_event" from="Visual/Area2D" to="." method="_on_Click_input_event"]
